     * Bond rebalancing log messages of INFO log level are highly reduced: they
       are now printed once in rebalance run.  Previous detailed log messages
       have been moved to the DBG log level.
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
     * Removed upper limit for the number of rx/tx descriptors (n_r/txq_desc).
     * OVS validated with DPDK 24.11.2.
   - ovs-ctl:
     * Added a new option, --oom-score=<score>, to set the daemons' Linux
       Out-Of-Memory (OOM) killer score.
     * Added a new option, --ulimit-core=<LIMIT>, to set the daemon's ulimit
       core file size.
   - ovs-appctl:
     * Added JSON output support to the 'ovs/route/show' command.
   - SSL/TLS:
     * Support for deprecated TLSv1 and TLSv1.1 protocols on OpenFlow and
       database connections is now removed.
   - Tunnels:
     * Support for previously deprecated LISP and STT tunnel port types
       is now removed.
   - ovs-tcpdump:
     * Update the --mirror-to option, adding support for specifying an
       existing port as a mirror interface.
   - Updated documentation to remove most documentation of kernel module
     that was previously part of the OVS distribution. It was removed from
     the OVS distribution in the 3.0 release and is no longer present in
     any supported versions of OVS. The remaining documentation of this
     kernel module relates to topics for older releases of OVS.


v3.5.0 - 17 Feb 2025
--------------------
   - The limit on the number of fields for address prefix tracking in flow
     tables increased from 3 to 4.  For example, it is now possible to
     specify both IPv4 and IPv6 address fields at the same time:
      $ ovs-vsctl set Bridge br0 flow_tables:123=@N -- \
          --id=@N create Flow_Table \
                    name=table123 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
   - Address prefix tracking is now enabled by default for both IPv4 and IPv6
     address fields: nw_dst, nw_src, ipv6_dst and ipv6_src.